validator_derive_tests/tests/compile-fail/must_not_match/field_type_doesnt_match.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(must_not_match(other = "password2"))]
    password: String,
    password2: i32,
}

fn main() {}
